--- a/ui/app/styles/variables.scss
+++ b/ui/app/styles/variables.scss
@@ -5,6 +5,8 @@ $color-vert2:   #6acacb;
 $color-vert3:   #2a8182;
 $color-gris:    #424950;
 $color-gris2:   #e2e2e2;
+$color-gris3:   #f2f3f3;
+$color-gris4:   #eeeff0;
 $color-rouge:   rgb(245, 73, 73); // rouge inactif, rouge alerte
 $color-rouge2:  #f82239;
 $color-jaune:   #ffbe60;
