--- a/ui/app/styles/search.scss
+++ b/ui/app/styles/search.scss
@@ -1,6 +1,10 @@
 @import "./variables";
 $sidebar-width: 60px;
 
+ul.selection-list li.sl-line:hover {
+  background: $color-gris4;
+}
+
 .mov-logo {
   float: left;
   width: 40px;
@@ -53,12 +57,12 @@ $sidebar-width: 60px;
   margin-bottom: 0;
 }
 .title-level-1 {
-  color: $color-vert;
+  color: $color-vert2;
 }
 .title-level-1 .form-control {
   font-size: 16px;
   font-weight: bold;
-  color: $color-vert;
+  color: $color-vert2;
   background-image: none;
 }
 
@@ -75,7 +79,7 @@ $sidebar-width: 60px;
 
 .title-group-key {
   margin: 2px 0 5px 5px;
-  color: $color-vert;
+  color: $color-vert2;
   font-size: 20px;
   padding-top: 5px;
 }
